:lipstick: Corrected a style collapse.

--- a/src/client/components/molecules/Header/style.module.scss
+++ b/src/client/components/molecules/Header/style.module.scss
@@ -26,6 +26,8 @@
   margin-bottom: 12px;
 }
 .tags {
+  display: flex;
+  align-items: center;
   >* {
     margin-right: 0.6rem;
   }
